Superadmin: cambio en main y detalle rest

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -9,12 +9,12 @@
     android:background="@color/bg_color"
     tools:context=".activity.login.ForgotPasswordActivity">
 
-    <!-- Header con logo y opciones -->
+    <!-- Header -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/headerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="12dp">
 
         <Button
             android:id="@+id/btnBack"
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Olvidé contraseña"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:fontFamily="@font/sen_font"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
