--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -192,12 +192,19 @@
                 android:layout_height="wrap_content"
                 android:hint="Pasaporte"
                 android:layout_marginBottom="16dp"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:endIconMode="custom"
+                app:endIconDrawable="@drawable/rounded_person_24"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:boxStrokeColor="@color/border_light"
+                app:hintTextColor="@color/border_light"
+                app:cursorColor="@color/border_light">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etPassport"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text" />
+                    android:inputType="number"
+                    android:maxLength="8"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Carnet de Extranjería -->
@@ -207,12 +214,19 @@
                 android:layout_height="wrap_content"
                 android:hint="Carnet de Extranjería"
                 android:layout_marginBottom="16dp"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:endIconMode="custom"
+                app:endIconDrawable="@drawable/rounded_person_24"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:boxStrokeColor="@color/border_light"
+                app:hintTextColor="@color/border_light"
+                app:cursorColor="@color/border_light">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etExtranjeria"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text" />
+                    android:inputType="number"
+                    android:maxLength="9"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Fecha de Nacimiento -->
