--- a/app/src/main/res/layout/item_pedido.xml
+++ b/app/src/main/res/layout/item_pedido.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="8dp"
-    android:layout_marginVertical="4dp"
+    android:layout_marginVertical="8dp"
     android:background="@drawable/border_bottom"
     android:backgroundTint="@color/white">
 
@@ -66,6 +66,8 @@
                 android:textSize="14sp"
                 android:textColor="#888888"
                 android:text="2118 Thornridge Cir. Syracuse"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:fontFamily="@font/sen_font"/>
         </LinearLayout>
 
