--- a/app/src/main/res/layout/activity_cliente_info_perfil.xml
+++ b/app/src/main/res/layout/activity_cliente_info_perfil.xml
@@ -123,6 +123,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvTipoDocId"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="N° DNI"
@@ -131,7 +132,7 @@
                     android:fontFamily="@font/sen_font"/>
 
                 <TextView
-                    android:id="@+id/tvUserDNI"
+                    android:id="@+id/tvUserDocId"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="12345678"
