--- a/app/src/main/res/layout/activity_cliente_checkout.xml
+++ b/app/src/main/res/layout/activity_cliente_checkout.xml
@@ -13,34 +13,38 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- Header con botón de regresar y título -->
-        <LinearLayout
+        <!-- Header -->
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
             android:padding="12dp">
 
-            <!-- Botón de regresar (flecha) -->
             <Button
-                style="?attr/materialIconButtonFilledTonalStyle"
                 android:id="@+id/btnBack"
+                style="?attr/materialIconButtonFilledTonalStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:icon="@drawable/baseline_arrow_back_ios_new_24"
                 android:contentDescription="@string/btnBack"
-                android:backgroundTint="@color/bg_color"/>
+                android:backgroundTint="@color/bg_color"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
-            <!-- Texto "Resumen de pedido" -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Resumen del pedido"
-                android:textSize="20sp"
-                android:fontFamily="@font/sen_font">
-            </TextView>
-        </LinearLayout>
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:fontFamily="@font/sen_font"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
